解决jdk8兼容问题